<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="it.danielmilano.beers.ui.beerlist.SearchBeerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_grey_900"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@id/reset"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/reset"
                app:srcCompat="@drawable/ic_close_white" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="4dp"
                android:text="@string/beer_filters_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/beer_filters_reset"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/brewed_before_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_blue_grey_900_with_border_white_rounded"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/beer_filters_brewed_before_hint"
                android:padding="16dp"
                android:text='@{viewModel.brewedBeforeDate ?? @string/beer_filters_brewed_before_hint}'
                android:textColor="@{viewModel.brewedBeforeDate != null ? @color/md_white_1000 : @color/md_grey_500}"
                android:textColorHint="@color/md_grey_500"
                app:drawableStartCompat="@drawable/ic_calendar_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@color/md_grey_500" />

            <TextView
                android:id="@+id/brewed_after_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_blue_grey_900_with_border_white_rounded"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/beer_filters_brewed_after_hint"
                android:padding="16dp"
                android:text='@{viewModel.brewedAfterDate ??  @string/beer_filters_brewed_after_hint}'
                android:textColor="@{viewModel.brewedAfterDate != null ? @color/md_white_1000 : @color/md_grey_500}"
                android:textColorHint="@color/md_grey_500"
                app:drawableStartCompat="@drawable/ic_calendar_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brewed_before_date_picker"
                tools:textColor="@color/md_grey_500" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/beer_filters_apply"
                android:textColor="@color/md_white_1000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brewed_after_date_picker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>